@@ -18,7 +18,14 @@
 #include <stdlib.h>
 
 ClutterActor *stage = NULL;
-ClutterTimeline *timeline = NULL;
+
+/* For rotating all images around an ellipse: */
+ClutterTimeline *timeline_rotation = NULL;
+
+/* For moving one image up and scaling it: */
+ClutterTimeline *timeline_moveup = NULL;
+ClutterBehaviour *behaviour_scale = NULL;
+ClutterBehaviour *behaviour_path = NULL;
 
 static void
 on_texture_button_press (ClutterActor *actor, ClutterEvent *event, gpointer data);
@@ -29,6 +36,7 @@ typedef struct Item
 {
   ClutterActor *actor;
   ClutterBehaviour *ellipse_behaviour;
+  gchar* filepath;
 }
 Item;
 
@@ -38,10 +46,22 @@ GSList *list_items = 0;
 
 void on_foreach_clear_list_items(gpointer data, gpointer user_data)
 {
-  Item *item = (Item*)data;
-  clutter_actor_destroy (item->actor);
+  Item* item = (Item*)data;
+
+  /* We don't need to unref the actor because the floating reference was taken by the stage. */
   g_object_unref (item->ellipse_behaviour);
+  g_free (item->filepath);
   g_free (item);
+}
+
+void scale_texture_default(ClutterActor *texture)
+{
+  GdkPixbuf *pixbuf = clutter_texture_get_pixbuf (CLUTTER_TEXTURE (texture));
+  g_return_if_fail (pixbuf);
+
+  const int pixbuf_height = gdk_pixbuf_get_height(pixbuf);
+  const gdouble scale = pixbuf_height ? 100 /  (gdouble)pixbuf_height : 0;
+  clutter_actor_set_scale (texture, scale, scale);
 }
 
 void load_images(const gchar* directory_path)
@@ -58,7 +78,7 @@ void load_images(const gchar* directory_path)
   /* Discover the images in the directory: */
   GError *error = NULL;
   GDir* dir = g_dir_open (directory_path, 0, &error);
-  if(error)
+  if (error)
   {
     g_warning("g_dir_open() failed: %s\n", error->message);
     g_clear_error(&error);
@@ -78,11 +98,10 @@ void load_images(const gchar* directory_path)
 
       /* Add an actor to show this image: */
       item->actor = clutter_texture_new_from_pixbuf (pixbuf);
+      item->filepath = g_strdup(path);
 
       /* Make sure that all images are shown with the same height: */
-      const int pixbuf_height = gdk_pixbuf_get_height(pixbuf);
-      const gdouble scale = pixbuf_height ? 100 /  (gdouble)pixbuf_height : 0;
-      clutter_actor_set_scale (item->actor, scale, scale);
+      scale_texture_default (item->actor);
 
       list_items = g_slist_append (list_items, item);
     }
@@ -95,14 +114,14 @@ void load_images(const gchar* directory_path)
 }
 
 
-void add_to_ellipse_behaviour(ClutterTimeline *timeline, gdouble start_angle, Item *item)
+void add_to_ellipse_behaviour(ClutterTimeline *timeline_rotation, gdouble start_angle, Item *item)
 {
-  g_return_if_fail (timeline);
+  g_return_if_fail (timeline_rotation);
 
-  ClutterAlpha *alpha = clutter_alpha_new_full (timeline, CLUTTER_ALPHA_SINE_INC, NULL, NULL);
+  ClutterAlpha *alpha = clutter_alpha_new_full (timeline_rotation, CLUTTER_ALPHA_SINE_INC, NULL, NULL);
  
   item->ellipse_behaviour = clutter_behaviour_ellipse_new (alpha, 
-    400, 300, /* x, y */
+    300, 300, /* x, y */
     450, 450, /* width, height */
     CLUTTER_ROTATE_CW,
     start_angle, start_angle + 360);
@@ -139,7 +158,7 @@ void add_image_actors()
     g_signal_connect (actor, "button-press-event",
       G_CALLBACK (on_texture_button_press), item);
 
-    add_to_ellipse_behaviour (timeline, angle, item);
+    add_to_ellipse_behaviour (timeline_rotation, angle, item);
     angle += angle_step;
 
     clutter_actor_show (actor);
@@ -151,17 +170,76 @@ void add_image_actors()
 gdouble angle_in_360(gdouble angle)
 {
   gdouble result = angle;
-  while(result > 360)
+  while(result >= 360)
     result -= 360;
   
   return result;
+}
+
+/* This signal handler is called when the item has finished 
+ * moving up and increasing in size.
+ */
+void on_timeline_moveup_completed(ClutterTimeline* timeline, gpointer user_data)
+{
+  /* Unref this timeline because we have now finished with it: */
+  g_object_unref (timeline_moveup);
+  timeline_moveup = NULL;
+
+  g_object_unref (behaviour_scale);
+  behaviour_scale = NULL;
+
+  g_object_unref (behaviour_path);
+  behaviour_path = NULL;
+}
+
+/* This signal handler is called when the items have completely 
+ * rotated around the ellipse.
+ */
+void on_timeline_rotation_completed(ClutterTimeline* timeline, gpointer user_data)
+{
+  ClutterActor *actor = item_at_front->actor;
+
+  /* All the items have now been rotated so that the clicked item is at the front. */
+  /* Now we transform just ths one item gradually some more: */
+
+  timeline_moveup = clutter_timeline_new(60 /* frames */, 30 /* frames per second. */);
+  ClutterAlpha *alpha = clutter_alpha_new_full (timeline_moveup, CLUTTER_ALPHA_SINE_INC, NULL, NULL);
+ 
+  /* Scale the item from its normal scale to twice the normal scale: */
+  gdouble scale_start = 0;
+  clutter_actor_get_scale (actor, &scale_start, NULL);
+  const gdouble scale_end = scale_start * 2;
+
+  behaviour_scale = 
+    clutter_behaviour_scale_new (alpha, scale_start, scale_end, CLUTTER_GRAVITY_NONE);
+  clutter_behaviour_apply (behaviour_scale, actor);
+
+  /* Move the item up the y axis: */
+  ClutterKnot knots[2];
+  knots[0].x = clutter_actor_get_x (actor);
+  knots[0].y = clutter_actor_get_y (actor);
+  knots[1].x = knots[0].x;
+  knots[1].y = knots[0].y - 200;
+  behaviour_path = 
+    clutter_behaviour_path_new  (alpha, knots, G_N_ELEMENTS(knots));
+  clutter_behaviour_apply (behaviour_path, actor);
+
+  /* Start the timeline and handle its "completed" signal so we can unref it. */
+  g_signal_connect (timeline_moveup, "completed", G_CALLBACK (on_timeline_moveup_completed), NULL);
+  clutter_timeline_start (timeline_moveup);
+
+  g_object_unref (alpha);
 }
 
 void rotate_all_until_item_is_at_front(Item *item)
 {
   g_return_if_fail (item);
 
-  clutter_timeline_stop(timeline);
+  clutter_timeline_stop(timeline_rotation);
+
+  /* Stop the other timeline in case that is active at the same time: */
+  if(timeline_moveup)
+    clutter_timeline_stop (timeline_moveup);
 
   /* Get the item's position in the list: */
   const gint pos = g_slist_index (list_items, item);
@@ -191,8 +269,18 @@ void rotate_all_until_item_is_at_front(Item *item)
   {
     Item *this_item = (Item*)list->data;
 
+    /* Reset its size: */
+    scale_texture_default (this_item->actor);
+
     angle_start = angle_in_360 (angle_start);
     angle_end = angle_in_360 (angle_end);
+
+    /* Move 360 instead of 0 
+     * when moving for the first time,
+     * and when clicking on something that is already at the front.
+     */
+    if(item_at_front == item)
+      angle_end += 360;
 
     clutter_behaviour_ellipse_set_angle_start (
       CLUTTER_BEHAVIOUR_ELLIPSE (this_item->ellipse_behaviour), angle_start);
@@ -201,16 +289,12 @@ void rotate_all_until_item_is_at_front(Item *item)
 
     if(this_item == item)
     {
-      printf("debug: pos = %d\n", pos);
-      printf("debug: angle_start = %f\n", angle_start);
-      printf("debug: angle_end = %f\n", angle_end);
-   
       if(angle_start < angle_end)
         angle_diff =  angle_end - angle_start;
       else
         angle_diff = 360 - (angle_start - angle_end);
 
-      printf("  debug: angle diff=%f\n", angle_diff);
+      /* printf("  debug: angle diff=%f\n", angle_diff); */
 
     }
 
@@ -237,20 +321,21 @@ void rotate_all_until_item_is_at_front(Item *item)
      pos_to_move = pos_front - pos;
   }
 
-  clutter_timeline_set_n_frames (timeline, angle_diff);
+  clutter_timeline_set_n_frames (timeline_rotation, angle_diff);
 
+  /* Remember what item will be at the front when this timeline finishes: */
   item_at_front = item;
 
-  clutter_timeline_start (timeline);
+  clutter_timeline_start (timeline_rotation);
 }
 
 static void
 on_texture_button_press (ClutterActor *actor, ClutterEvent *event, gpointer user_data)
 {
-  /* Ignore the events if the timeline is running (meaning, if the objects are moving),
+  /* Ignore the events if the timeline_rotation is running (meaning, if the objects are moving),
    * to simplify things:
    */
-  if(timeline && clutter_timeline_is_playing (timeline))
+  if(timeline_rotation && clutter_timeline_is_playing (timeline_rotation))
   {
     printf("on_texture_button_press(): ignoring\n");
     return;
@@ -261,7 +346,6 @@ on_texture_button_press (ClutterActor *actor, ClutterEvent *event, gpointer user
   Item *item = (Item*)user_data;
   rotate_all_until_item_is_at_front (item);
 }
-
 
 int main(int argc, char *argv[])
 {
@@ -282,20 +366,29 @@ int main(int argc, char *argv[])
   /* Show the stage: */
   clutter_actor_show (stage);
 
-  timeline = clutter_timeline_new(100 /* frames */, 30 /* frames per second. */);
+  timeline_rotation = clutter_timeline_new(60 /* frames */, 30 /* frames per second. */);
+  g_signal_connect (timeline_rotation, "completed", G_CALLBACK (on_timeline_rotation_completed), NULL);
 
   /* Add an actor for each image: */
   load_images ("./images/");
   add_image_actors ();
 
-  /* clutter_timeline_set_loop(timeline, TRUE); */
+  /* clutter_timeline_set_loop(timeline_rotation, TRUE); */
 
   /* Move them a bit to start with: */
   if(list_items)
     rotate_all_until_item_is_at_front ((Item*)list_items->data);
 
+
   /* Start the main loop, so we can respond to events: */
   clutter_main ();
+
+
+  /* Free the list items and the list: */
+  g_slist_foreach(list_items, on_foreach_clear_list_items, NULL);
+  g_slist_free (list_items);
+
+  g_object_unref (timeline_rotation);
 
   return EXIT_SUCCESS;
 
